<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="delete"><![CDATA[<=]]></string>
    <string name="multiplication">*</string>
    <string name="dividing">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtraction">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="percent">%</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="equally">=</string>
    <string name="BlackTheme1">Чёрная тема </string>
    <string name="LightTheme1">Светлая тема</string>
    <string name="choice">выбрать</string>
    <string name="Choose_a_style">Выбрать стиль</string>
    <string name="my_cool_style">My cool style</string>
    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material light action bar dark</string>
    <string name="material_dark">Material dark</string>

</resources>