<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:textColor="#ffffff"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/greenish_gray"
            android:text="@string/c" />

        <Button
            android:id="@+id/delete_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/greenish_gray"
            android:text="@string/delete" />

        <Button
            android:id="@+id/multiply_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/greenish_gray"
            android:text="@string/multiplication"
            android:textSize="25sp" />

        <Button
            android:id="@+id/divide_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/greenish_gray"
            android:text="@string/dividing" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_1" />

        <Button
            android:id="@+id/two_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_2" />

        <Button
            android:id="@+id/three_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_3" />

        <Button
            android:id="@+id/plus_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/greenish_gray"
            android:text="@string/addition" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_4" />

        <Button
            android:id="@+id/five_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_5" />

        <Button
            android:id="@+id/six_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_6" />

        <Button
            android:id="@+id/minus_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/greenish_gray"
            android:text="@string/subtraction" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_7" />

        <Button
            android:id="@+id/eight_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_8" />

        <Button
            android:id="@+id/nine_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_9" />

        <Button
            android:id="@+id/percent_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/greenish_gray"
            android:text="@string/percent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dot_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/dot" />

        <Button
            android:id="@+id/zero_btn"
            style="@style/number_btn"
            android:backgroundTint="@color/granite_grey"
            android:text="@string/_0" />

        <Button
            android:id="@+id/equals_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="25"
            android:backgroundTint="@color/yellow_orange"
            android:text="@string/equally"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>